
This file lists Solr's raw release notes with details of every change to Solr.
Most people will find the solr-upgrade-notes.adoc file more approachable.
https://github.com/apache/solr/blob/main/solr/solr-ref-guide/modules/upgrade-notes/pages/solr-upgrade-notes.adoc

==================  9.6.1 ==================
Bug Fixes
---------------------
(No changes)

Dependency Upgrades
---------------------
(No changes)

==================  9.6.0 ==================
New Features
---------------------
* SOLR-17141: Implement 'cpuAllowed' query parameter to limit the maximum CPU usage by a running query. (Andrzej Bialecki, Gus Heck, David Smiley)

* SOLR-599: Add a new SolrJ client using the JDK’s built-in Http Client.  (James Dyer)

* SOLR-16403: A new cluster singleton plugin to automatically remove inactive shards. (Paul McArthur, David Smiley)

* SOLR-16466: Admin UI - Make it optional to sort list of commandline args (Shawn Heisey, Vincenzo D'Amore via Christine Poerschke)

Improvements
---------------------
* SOLR-17119: When registering or updating a ConfigurablePlugin through the `/cluster/plugin` API,
  config validation exceptions are now propagated to the callers. (Yohann Callea)

* SOLR-16699: Add Collection creation time to CLUSTERSTATUS and COLSTATUS API responses
  (Julien Pilourdault, Paul McArthur, David Smiley)

* SOLR-17038: Expose the term count in /admin/segments handler if fieldInfo=true.
  (Rahul Goswami via David Smiley and Christine Poerschke)

* SOLR-17146: Add DelegatingBackupRepository and alternative checksum verification (Bruno Roustant)

* SOLR-16858: KnnQParser's "Pre-Filtering" behavior is now controlable via local params (hossman)

* SOLR-17145: The INSTALLSHARDDATA API now includes a 'requestid' field when run asynchronously (Jason Gerlowski)

* SOLR-17159: bin/solr post now has proper unit testing.  Users can specify a --dry-run option to
  simulate posting documents without sending them to Solr. (Eric Pugh)
